fixed problem with not visible ok button when editing time range; changed margins for all buttons; fixed some warnings;